# murmurent

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Open Dashboard.command  README.md  TROUBLESHOOTING.md  TUTORIAL.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: smoke_test.md
.github/workflows/: docs.yml
agents/: adversary.md  artist.md  blacksmith.md  bookworm.md  cable_guy.md  centre_cable_guy.md  conscience.md  judge.md  lab_oracle.md  lawyer.md  oracle.md  receptionist.md  registrar.md  saul_goodman.md  security_guard.md
assets/: 2026_Schulich_WRC_Performance_Report_Template_19Mar2026_V1.docx  2026_Schulich_WRC_Research_Program_Template_19Mar2026_V1.docx  Untitled Bibliography.rtf  murmurent_app_icon.py  murmurent_uniform_wordmark.html  wigamig_app_icon.py
docs/: agents.md  assembling_choreographies.md  backlog.md  centre_guardians.md  centre_overview.md  centre_root_key.md  choreography.md  cli_manual.md  connect_to_hub.md  contributions.md  cores_plan.md  cores_smoke_runbook.md  dashboard.md  diagrams.md  getting_started.md  github_setup.md  group_level.md  group_slack_setup.md  guardians.md  hub_setup.md  identity.md  implementation_prompt.md  implementation_prompt_phase_1_foundation.md  implementation_prompt_phase_2_project_experiment.md  implementation_prompt_phase_3_push_sea.md  implementation_prompt_phase_4_mcp_hooks.md  implementation_prompt_phase_5_dashboard_tutorial.md  index.md  inventory.md  lab_mgmt.md  lab_notebook_guide.md  memory.md  murmurent_data.md  obsidian-layout.md  obsidian-usage.md  oracle-workflow.md  overview.md  phrases.md  project_creation.md  project_inter.md  (+13 more)
docs/designer_dashboard/: HANDOFF.md  Murmurent Dashboard Hi-Fi.html  Murmurent Dashboard Wireframes.html  Wigamig Dashboard Hi-Fi.html  auth-modal.js  core.html  hifi-app.jsx  hifi-data.jsx  hifi-notebook.jsx  join.html  login.html  registrar.html  security.html
docs/diagrams/: README.md  install_modes.dot  system_map.dot
docs/murmurent_public/: README.md
docs/style/: code-style.md  documentation.md
docs/stylesheets/: extra.css
docs/vault_vignettes/: 1_save_a_fact.md  2_recall_a_fact.md  3_frontmatter_and_me.md  4_add_a_manuscript.md  (+4 more)
instruments/: illumina-novaseq.yaml
rules/: data-storage.md  headline_first.md  manuscript.md  oracle_schema.md  project-structure.md  slack.md
scripts/: backfill_local_repos.py  bootstrap.sh  create_linux_launcher.sh  create_mac_app.sh  fake_data.py  generate_dashboard.py  identity_smoke.sh  install_remote.sh  lab_sec_dump.sh  lab_sec_dump.sh.sha256  murmurent-dashboard.service  murmurent_log_agent_event.sh  murmurent_project_acl.sh  murmurent_sec_scan.sh  open_murmurent.sh  open_wigamig.sh  render_diagrams.sh  seed_centre.py  seed_fake_users.py  seed_tutorial.py  seed_two_labs.py  setup.sh  start_workspace.sh  wigamig-dashboard.service  wigamig_project_acl.sh  wigamig_sec_scan.sh
tests/: conftest.py  test_age_join.py  test_agent_edit.py  test_agent_forks.py  test_agent_sync.py  test_agents.py  test_audit_hook.py  test_audit_log.py  test_book_conflict_check.py  test_broadcasts.py  test_calendar_google.py  test_calendar_iso_normalize.py  test_centre_cmd.py  test_centre_http.py  test_centre_init.py  test_centre_init_extended_schema.py  test_centre_provision.py  test_centre_root.py  test_centre_slack_smoke.py  test_cert_projects.py  test_cert_provision.py  test_charter.py  test_choreography.py  test_choreography_run.py  test_chrome_propagation.py  test_cli_help.py  test_common_seas.py  test_common_tools.py  test_compliance.py  test_context_inject.py  test_contribution_contract.py  test_contribution_output.py  test_contribution_spec.py  test_contributions_choreographies.py  test_core_crud.py  test_core_dashboard.py  test_core_invoice_endpoints.py  test_core_requests_inbox.py  test_cores.py  test_cores_browse_endpoints.py  (+116 more)
(+303 files in other folders)
