[project]
name = "wigamig"
version = "0.1.0"
description = "Group-level agentic infrastructure for the Hallett bioconvergence center."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mike Hallett", email = "hallett.mike.t@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
]
mcp = [
    "mcp>=1.0",
]
dashboard = [
    "streamlit>=1.30",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
slack = [
    "slack-sdk>=3.30",
    "anthropic>=0.40",
]

[project.scripts]
wigamig = "wigamig.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wigamig"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
