[project]
name = "wigamig"
version = "1.0.0"
description = "Multi-group agentic infrastructure for a bioconvergence centre — with the v1 registrar layer above any single lab."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Mike Hallett", email = "hallett.mike.t@gmail.com" },
]
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.7",
    # Runtime deps for the hi-fi dashboard (FastAPI server), Slack comms, and
    # the MCP servers. Kept as HARD deps — NOT optional extras — on purpose:
    # `uv` does not persist an editable tool's extras in its receipt, so any
    # bare `uv tool install .` / `--reinstall .` / re-sync silently dropped them
    # and repeatedly broke `wigamig dashboard`. As base deps they install no
    # matter how wigamig is installed. Only heavy streamlit (low-fi dashboard)
    # stays optional, under the `dashboard` extra below.
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.0",
    "slack-sdk>=3.30",
    "anthropic>=0.40",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "isort>=5.13",
]
mcp = [
    "mcp>=1.0",
]
dashboard = [
    "streamlit>=1.30",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
]
slack = [
    "slack-sdk>=3.30",
    "anthropic>=0.40",
]
gcal = [
    "google-api-python-client>=2.130",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.scripts]
wigamig = "wigamig.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wigamig"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
